# pomo_timer

./: .gitignore  CMakeLists.txt  README.md  backup_calendar.txt  calendar.txt  pomo.sh  setup.sh
.cache/clangd/index/: SimplePomoTimer.cpp.A16DB8E31738BC4C.idx  SimplePomoTimer.h.27B6B0A065D96336.idx  pomo.cpp.D583A8D54A2BC46E.idx
include/: SimplePomoTimer.h
src/: SimplePomoTimer.cpp  SimpleTimer.cpp  pomo.cpp
